# FlexPress

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build.yaml  publish.yaml
src/: cli.rs  main  main.rs
