[package]
name = "flexpress"
version = "0.1.0"
description = "A tool for archiving files and directories and extracting several archive formats."
repository = "https://github.com/SASA-AKITO/FlexPress"

readme = "README.md"
authors = [
"Akito Sasahara <i486093@cc.kyoto-su.ac.jp"
]
license-file = "LICENSE"
categories = ["command-line-utilities", "compression"]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }