[package]
name = "FlexPress"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/SASA-AKITO/flexpress"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"